--- a/ChangeLog
+++ b/ChangeLog
@@ -1,9 +1,14 @@
 
 ======== version history for XML::Compile::RPC
 
-version 0.18:
+version 0.19:
+	- add support for apache types
+
+version 0.18: Sat Jul 25 23:53:12 CEST 2015
+
 	Improvements:
 	- change documentation style
+	- return $trace for each call()
 
 version 0.17: Thu Sep 12 08:30:44 CEST 2013
 	- rpc "string" type, now from ASCIIstring to xsd:string
