fix version number

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,8 @@
 
 ======== version history for XML::Compile::RPC
 
-version 0.19:
+version 0.20: Wed 15 Jan 13:07:35 CET 2020
+
 	Changes:
 	- require perl 5.10
 
